| Bug #56524 | node crash with online alter table, traffic and adding columns | ||
|---|---|---|---|
| Submitted: | 3 Sep 2010 5:26 | Modified: | 3 Sep 2010 16:25 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[3 Sep 2010 5:26]
Jonas Oreland
[3 Sep 2010 5:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/117482 3280 Jonas Oreland 2010-09-03 ndb - bug#56524 - sizeof(CopyTuple::Changemask) might not be equal to cols, due to online add column
[3 Sep 2010 6:06]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.47-ndb-6.3.38 (revid:jonas@mysql.com-20100903053017-2rp1nn0d3ydj2nob) (version source revid:jonas@mysql.com-20100903053017-2rp1nn0d3ydj2nob) (merge vers: 5.1.47-ndb-6.3.38) (pib:21)
[3 Sep 2010 6:06]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.47-ndb-7.0.19 (revid:jonas@mysql.com-20100903053551-49rz7b9smjj9nq1u) (version source revid:jonas@mysql.com-20100903053551-49rz7b9smjj9nq1u) (merge vers: 5.1.47-ndb-7.0.19) (pib:21)
[3 Sep 2010 6:51]
Jonas Oreland
pushed to 6.3.38, 7.0.19 and 7.1.8
[3 Sep 2010 16:25]
Jon Stephens
Documented bugfix in the NDB-6.3.38, 7.0.19, and 7.1.8 changelogs, as follows:
An online ALTER TABLE ADD COLUMN operation that changed the table
schema such that the number of 32-bit words used for the bitmask
allocated to each DML operation increased during a transaction in
DML which was performed prior to DDL which was followed by either
another DML operation or--if using replication--a commit, led to
data node failure.
This was because the data node did not take into account that the
bitmask for the before-image was smaller than the current bitmask,
which caused the node to crash.
Closed.
