ndb - bug#56524 - sizeof(CopyTuple::Changemask) might not be equal to cols, due to online add column